# adc-rdm-sdk

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  buildspec.yml  docker-compose.yaml  library.ipynb  mkdocs.yml  pyproject.toml  requirements.txt
.github/: pull_request_template.md
adc/: cli.py  client.py  exceptions.py  queries.py  raw_queries.py
adc_sdk/: base.py  cli.py  client.py  exceptions.py  models.py  queries.py  raw_queries.py
adc_sdk/models/: entities.py  references.py
adc_sdk/queries/: __init__.py  raw_queries.py
argonne-adc/: README.md  adc.py  library.ipynb  sample_json  setup.py
argonne-adc/querys/: createInvestigation.txt  investigations.txt  keywords.txt  keywordsId.txt  query.py  sample.txt  samples.txt  studies.txt  study.txt  test.txt
argonne-adc/release_lib/: adc-0.0.1-py3-none-any.whl
argonne-adc/variables/: createInvestigation.json  study.json  users.json  variable.py
docs/: index.md  installation.md
docs/cli/: tutorial.md  usage.md
docs/sdk/: code_reference.md  tutorial.md
kube/dev/: docs-deployment.yml  docs-ingress.yml  docs-service.yml
kube/stage/: docs-ingress.yml  docs-service.yml
nginx/: default.conf
scripts/: ci-deploy.sh
sdk/: Makefile  example_env  main.py  requirements.txt
sdk/globus/: main.py
sdk/querys/: createStudy.txt  investigation.txt  me.txt  user.txt  users.txt
sdk/variables/: createInvestigation.json  sample.json
tests/: conftest.py  test_adc.py  test_models.py
tests/example-outputs/: create-sample.json  sample.json  study.json  subscribe-to-study_new-sample.json  user.json
tests/example_outputs/: create_sample.json  current_user.json  sample.json  study.json  subscribe_to_study_new-sample.json
