[tool.poetry]
name = "adc"
version = "0.1.0"
description = "Argonne Discovery Cloud SDK and CLI"
authors = ["Dom & Tom <hello@domandtom.com>"]
readme = "README.md"

[tool.poetry.scripts]
adc = "adc.cli:app"

[tool.poetry.dependencies]
python = "^3.7"
typer = "^0.3.2"
gql = "3.0.0a6"
aiohttp = "^3.7.4"
websockets = "^9.1"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
