[tool.poetry]
name = "adc-sdk"
version = "0.1.4"
description = "Argonne Discovery Cloud SDK and CLI"
authors = ["Argonne National Laboratory <discovery@anl.gov>"]
readme = "README.md"
license = "LICENSE"

[tool.poetry.scripts]
adc = "adc_sdk.cli:app"

[tool.poetry.dependencies]
python = "^3.7"
typer = "^0.3.2"
gql = "3.0.0a6"
aiohttp = "^3.7.4"
websockets = "^9.1"
requests = "^2.26.0"
pydantic = {extras = ["dotenv", "email"], version = "^1.8.2"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-mock = "^3.6.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
